--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+Version 0.9.0:
+ - Added jq to haxe-watch
+
 Version 0.8.0:
  - Added VERSION and CHANGES files, Version bump to v0.1.0
  - Better aws lambda building script
